<resources>
    <string name="app_name">GP-A211</string>

    //main
    <string name="exit_program_hint">Again according to exit the program</string>
    <string name="no_conn_wifi">You are not connected to any network, please connect to AVS`s WifiNetwork.</string>
    <string name="go">Go</string>
    <string name="no_open_location">App wants to check that you have connect the right network,please open location.</string>
    <string name="wifi_no_match">Wifi does not match, please connect to AVS`s WIFI network.</string>
    <string name="setting_wifi_to_avs">Setting Wifi to AVS</string>
    <string name="avs">AVS</string>
    <string name="wwa">WWA</string>
    <string name="about_us">About us</string>

    //menu
    <string name="avs_setting">AVS Setting</string>
    <string name="wwa_setting">WWA Setting</string>
    <string name="share_avs">rb_main_avs</string>
    <string name="share_wwa">rb_main_wwa</string>
    <string name="g_amp_y_co_ltd"><![CDATA[G & Y Co.Ltd]]></string>

    //avs
    <string name="setting_avs_wifi_connection">Configure AVS to connect Wifi</string>
    <string name="avs_wifi_hint">1.Please connect to AVS WiFi at first.You can change wifi by clicking the button below.</string>
    <string name="avs_config_hint">If you have already completed configuration,please change wifi to an already configured network.\nThen try to refresh this list.</string>
    <string name="error">ERROR</string>
    <string name="author_success">Author Successful</string>
    <string name="close">Close</string>
    <string name="remember_and_copy">Please press long to copy\nthe verification code</string>
    <string name="bind_device">Bind Device</string>
    <string name="net_unavailable">Network unavailable,please use configured NetWork.</string>
    <string name="avs_success">AVS configure is successful</string>
    <string name="avs_device_lists">AVS Device List</string>
    <string name="avs_wifi_available">Please connect to the network that belongs to AVS.</string>
    <string name="scan_qr_code">Scan Qr code</string>
    <string name="fail_login">Fail to login, please try again.</string>
    <string name="refresh_hint">Pull to refresh or Click here\nto refresh device list.</string>
    <string name="got_it">I got it</string>

    //wwa
    <string name="menu_item_about">About App</string>
    <string name="about_app_version">App Version: %s</string>
    <string name="about_esptouch_version">WWA Version: %s</string>
    <string name="ssid_title">SSID: </string>
    <string name="bssid_title">BSSID: </string>
    <string name="password_title">Password: </string>
    <string name="device_count_title">Device count: </string>
    <string name="package_broadcast">Broadcast</string>
    <string name="package_multicast">Multicast</string>
    <string name="confirm">Confirm</string>
    <string name="wifi_5g_message">Device don\'t support 5G Wifi, please make sure the currently connected Wifi is 2.4G</string>
    <string name="location_disable_message">Location(GPS) is disable</string>
    <string name="no_wifi_connection">No Wifi connection</string>
    <string name="configuring_message">WWA is configuring, please wait for a moment…</string>
    <string name="configure_wifi_change_message">Wifi disconnected or changed</string>
    <string name="configure_result_failed">WWA failed</string>
    <string name="configure_result_failed_port">Create WWA task failed, the WWA port could be used by other thread</string>
    <string name="configure_result_success">WWA Success</string>
    <string name="configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
    <string name="start_conn_wwa">start connecting to WWA</string>
    <string name="no_wifi_conn">You\'re not connected to wifi yet</string>
    <string name="nothing">Nothing to find.</string>
    <string name="wwa_device_lists">WWA Device Lists</string>
    <string name="configure">bind device</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="give_a_friendly_name">Give your device a friendly name</string>
    <string name="wake_up_hint">You will use this name to wake up device.</string>
    <string name="hint_create_thing">Creating thing…</string>
    <string name="associating_database">Associating database…</string>
    <string name="transmitting_data">Transmitting data to device…</string>
    <string name="transmit_completed">Transmit completed</string>
    <string name="device_name_used">Device name has been already used.</string>
    <string name="contain_hint">Contain only A-Za-z and Spaces</string>
    <string name="sign_in">Sign in</string>
    <string name="change_name">Change name</string>
    <string name="changing">changing…</string>
    <string name="complete_change">Complete change</string>
    <string name="not_responding">AVS is not responding.</string>
    <string name="location_unavailable">Location is unavailable. please open it.</string>
    <string name="permission_hint">App want to Check network name, please allow location permission.</string>
    <string name="create_thing_fail">Create thing fail, please try again.</string>
    <string name="version_s">App version: %s</string>
    <string name="bind">BIND DEVICE</string>
    <string name="designed_by">Designed by GREAT POWER\n\nApp Version: %s</string>
    <string name="unbind_device">Change Binding</string>
    <string name="change_wifi">Change WiFi</string>
    <string name="bound">This device is bound.\nIf you want to change binding,\nplease change wifi to the wifi configured for the AVS at first.</string>
    <string name="not_found_try_again">Device not found,please try again or change to right WiFi.</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="has_configured">This device is already configured WiFi.Please click button to go next.</string>
    <string name="second">2.Change WiFi to witch you have configured on AVS.Then click the button below to start binding.</string>
    <string name="request_timeout">Network request timeout</string>
    <string name="auto_change">Wifi has been automatically switched to</string>


</resources>
