<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">

    <include android:id="@+id/i_bind_tool"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/tv_bind_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/i_bind_tool"
        app:layout_constraintBottom_toTopOf="@+id/rl_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <RelativeLayout
        android:id="@+id/rl_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/i_bind_tool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearance"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:text="@string/bind_device"
            android:paddingLeft="@dimen/dp_16_x"
            android:paddingRight="@dimen/dp_16_x"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:layout_centerInParent="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_unbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearance"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:text="@string/unbind_device"
            android:paddingLeft="@dimen/dp_16_x"
            android:paddingRight="@dimen/dp_16_x"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rl_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dp_16_x"
        android:textAppearance="?android:attr/textAppearance"
        app:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/unbind_device"

        android:paddingLeft="@dimen/dp_16_x"
        android:paddingRight="@dimen/dp_16_x"
        android:paddingTop="@dimen/dp_8_x"
        android:paddingBottom="@dimen/dp_8_x"/>

    <RelativeLayout
        android:id="@+id/rl_avs_bind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/i_bind_tool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_avs_code"
            style="@style/main_tv"
            android:textIsSelectable="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/dp_8_x" />
        <TextView
            android:id="@+id/tv_avs_code_hint"
            style="@style/main_tv"
            android:text="@string/remember_and_copy"
            android:layout_marginBottom="@dimen/dp_8_x"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_avs_code"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_avs_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:text="@string/bind_device"
            android:layout_below="@+id/tv_avs_code_hint"
            android:textAppearance="?android:attr/textAppearance"
            android:paddingLeft="@dimen/dp_16_x"
            android:paddingRight="@dimen/dp_16_x"
            android:paddingTop="@dimen/dp_8_x"
            android:paddingBottom="@dimen/dp_8_x"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>